@@ -28,7 +28,11 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
-    PIG_1078: merge join with empty table failed (yanz via gates)
+
+    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
+	gates)
+
+    PIG-1078: merge join with empty table failed (yanz via gates)
 
     PIG-1091: Exception when load with projection of map keys on a map column
 	that is not map split (yanz via gates).
